
- #13428: support dump=[source | parsetree | lambda | ... | cmm | ...]
  in OCAMLRUNPARAM
  (Gabriel Scherer, review by Vincent Laviron)

### Internal/compiler-libs changes:

- #13425: undocumented -dmatchcomp flag for the debug
  output of the pattern-matching compiler
  (Gabriel Scherer, review by Vincent Laviron and Nicolás Ojeda Bär)

### Build system:

### Bug fixes:

- #13408: Fix misplaced debug runtime assertion triggerable by a race
  between domain exit and backup thread
  (Miod Vallat and Gabriel Scherer, report by Jan Midtgaard)

- #13454: Output a correct trace of the C_CALLN bytecode.
  (Miod Vallat, review by Antonin Décimo)

OCaml 5.3.0
___________

(Changes that can break existing programs are marked with a "*")

### Restored backend:

- #12954: Restore the MSVC port
  (David Allsopp, Antonin Décimo, Samuel Hym, and Miod Vallat, review by Nicolás
   Ojeda Bär)

- #13093: Allow building the MSVC port with clang-cl.
  (Antonin Décimo, review by Nicolás Ojeda Bär, Samuel Hym,
   David Allsopp and Sébastien Hinderer)

### Language features:

- #12828, #13283: Add short syntax for dependent functor types `(X:A) -> ...`
  (Jeremy Yallop, review by Nicolás Ojeda Bär and Gabriel Scherer)

- #12309, #13158: Add syntax support for deep effect handlers
  (Leo White, Tom Kelly, Anil Madhavapeddy, KC Sivaramakrishnan, Xavier Leroy
   and Florian Angeletti, review by the same, Hugo Heuzard, and Ulysse Gérard)

### Type system

- #11891, #12507: Allow to name new locally abstract types in constructor type
  annotations.
  (Jacques Garrigue, report and review by Gabriel Scherer and Florian Angeletti)

### Runtime system:

- #13419: Fix memory bugs in runtime events system.
  (B. Szilvasy and Nick Barnes, review by Miod Vallat, Nick Barnes,
   Tim McGilchrist, and Gabriel Scherer)

- #13364: Emit major slice counters in the runtime events.
  (KC Sivaramakrishnan and Sadiq Jaffer, review by Gabriel Scherer)

- #13382: Add more documentation for Runtime_events types